# dummy-ci-project-dagger

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ci/: main.py
src/demo_ci_project/: foo.py
tests/: test_bar.py
