[tool.poetry]
name = "demo-ci-project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "demo_ci_project", from = "src"}]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.265"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
